--- a/test.html
+++ b/test.html
@@ -12,7 +12,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
         <i class="fa d-inline fa-lg fa-cloud"></i>
-        <b> Brand</b>
+        <b> NodeLogViewer</b>
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
