--- a/websocket.html
+++ b/websocket.html
@@ -30,13 +30,13 @@
     });
 
     socket.on('log', function(data) {
-      var message = $('<div>' + data + '</div>').addClass('col-md-12');
+      var message = $('<li>' + data + '</li>').addClass('list-group-item d-flex justify-content-between align-items-center');
 
       $('#messages').append(message);
     });
 
     function select_log(id) {
-      alert(id);
+      // alert(id);
 
       // socket.emit('select', $('#logfile :selected').val());
       socket.emit('select', id);
@@ -110,8 +110,22 @@
           </div>
         </div>
       </div>
-      <div class="row" id="messages">
-        <div class="col-md-12"></div>
+      <div class="row">
+        <div class="col-md-12">
+          <ul class="list-group" id="messages">
+            <!--
+            <li class="list-group-item d-flex justify-content-between align-items-center" > Cras justo odio
+              <span class="badge badge-primary badge-pill">14</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"> Dapibus ac facilisis in
+              <span class="badge badge-primary badge-pill">2</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"> Morbi leo risus
+              <span class="badge badge-primary badge-pill">1</span>
+            </li>
+            -->
+          </ul>
+        </div>
       </div>
     </div>
   </div>
